[package]
name = "lumen_nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
e1_20 = {path = "../e1_20"}
pretty-hex = "0.2.1"
log = "0.4.14"
simplelog = "0.10.0"
socket2 = { version = "0.3.4", features = ["reuseport"] }

[[bin]]
name = "sn_test"
path = "src/bin.rs" # replace bin.rs with name of your file